Resolve the javafx com.sun.* packages and add-exports cli switches